--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,13 @@
             <version>${user-agent-utils.version}</version>
         </dependency>
         
+        <dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.16.10</version>
+		    <scope>provided</scope>
+	    </dependency>
+        
     </dependencies>
 
     <build>
